1999-03-07 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/dumper.c (startup_dump): rename dumpname to progname.
	the function will use the parameter progname instead of the
	global variable.

1999-03-06  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* configure.in (openbsd): according to Ralf Gebhart
	<rgebhart@cybernet-ag.net>, sparc-unknown-openbsd2.3 is supported;
	I assume other openbsd platforms work too.

1999-03-06 Thomas Hepper <th@ant.han.de>

	* client-src/sendbackup-gnutar.c: Replaced #fi with #endif
	* changer-src/: Get in sync with 2.4.2 Version

1999-03-05 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* configure.in: set SAMBA_VERSION
	* client-src/sendbackup-gnutar.c (start_backup): use -q flag
	if SAMBA_VERSION >= 2

1999-03-05 Mathias Herberts <Mathias.Herberts@ago.fr>

	* recover-src/amrecover.h (set_mode, show_mode) declare new functions.
	* recover-src/amrecover.h (SAMBA_SMBCLIENT, SAMBA_TAR) define new 
	constant.
	* recover-src/extract_list.c: declare variable samba_extract_method.
	* recover-src/extract_list.c (extract_files_child): set dumptype
	according to samba_extract_method.
	* recover-src/help.c (help_list): print help for new command mode
	and showmode.
	* recover-src/set_commands.c (set_mode, show_mode): new functions.
	* recover-src/uscan.l:
	* recover-src/uparse.y:

1999-03-05  Mike Grupenhoff <kashmir@munge.com>

	* common-src/amanda.h: use ssize_t in writev return value
	* common-src/bsd-security.c (bsd_stream_write,bsd_stream_read):
	use ssize_t over int
	* common-src/file.c (areads): use ssize_t to hold read() return val
	* common-src/fileheader.c (fill_buffer): usse ssize_t to hold read()
	return val
	* common-src/security.h: stream_read's callback now takes a ssize_t
	as the third argument.
	* common-src/writev.c (writev): return a ssize_t

1999-03-05  Mike Grupenhoff <kashmir@munge.com>

	* configure.in: check for ssize_t, make it int if not present
	* config/acconfig.h: add def for ssize_t
